--- a/TahoTTNT2708_Main_Full.html
+++ b/TahoTTNT2708_Main_Full.html
@@ -164,4 +164,37 @@ body {
     </div>
   </div>
 </body>
-</html>
+</<section class="aurora-love-message">
+  <h2>💎💖 Thư gửi Vợ yêu – 20/10 💖💎</h2>
+  <p>
+    Hôm nay 20/10, cũng gần 1 năm 2 tháng mình bên nhau – quãng thời gian tuy không quá dài 
+    nhưng đủ để anh hiểu rằng, hạnh phúc thật sự chính là có em bên cạnh, đời anh không có em nó trống trãi và tẻ nhạt lắm! 💞
+  </p>
+  <p>
+    Anh biết, có những lúc anh nghỉ đơn giản khi hứa trả em nhưng không đúng hẹn làm em hy vọng rồi thất vọng. 
+    Anh xin lỗi vì đã để em buồn, để em chờ... Sau này sẽ là lần cuối anh để em thất vọng thêm bất kỳ lần nào nữa.
+  </p>
+  <p>
+    Từ hôm nay sẽ là cái lễ cuối cùng em ở một mình. Dịp Noel tới, anh sẽ về đón cùng em — 
+    như Noel năm đầu của hai chúng ta. 🌲
+  </p>
+  <p>
+    Những lần anh thất hứa, anh sẽ sửa đổi để dung hòa cùng em. 
+    Anh sẽ thực hiện từng điều một – kể từ hôm nay cho đến khi anh được cưới em, 
+    được gọi em là vợ thật sự của anh 💍. 
+  </p>
+  <p>
+    Anh xin lỗi vì ngày trước khi em mệt anh lại giận dỗi, vì đã không là chỗ dựa cho em, 
+    chỉ nghĩ đến bản thân. Anh biết lỗi. Anh xin lỗi Vợ của Anh – đừng giận anh nữa nhé ❤️
+  </p>
+  <p>
+    Sau này mỗi dịp lễ anh sẽ tặng hoa Linh Lan cho em, 
+    cho đến khi em đồng ý để anh gọi em là Vợ. 
+    Anh tin rằng loài hoa ấy sẽ mang lại điều anh ước — rằng anh và em sẽ thành đôi mãi mãi 💐
+  </p>
+  <p>
+    Cảm ơn em vì luôn bao dung, vì vẫn ở lại, vẫn yêu anh bằng cả tấm lòng.
+    Chúc em 20/10 thật hạnh phúc – vì em xứng đáng với tất cả yêu thương trên đời này 💖  
+    <b>Anh yêu em – hôm nay, mai sau và mãi mãi 💖</b>
+  </p>
+</section>
